--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastchat-mcp"
-version = "1.2.0"
+version = "1.2.1"
 authors = [{ name = "Raúl Beltrán Gómez", email = "rb58853@gmail.com" }]
 description = "Python client, based on fastmcp, for connecting to MCP servers through multiple protocols, specifically designed to work with integrated language models."
 readme = "README.md"
@@ -23,6 +23,7 @@ dependencies = [
   "fastapi",
   "websockets",
   "requests",
+  "yaml",
 ]
 
 [project.urls]
