--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastchat-mcp"
-version = "1.2.1"
+version = "1.2.3"
 authors = [{ name = "Raúl Beltrán Gómez", email = "rb58853@gmail.com" }]
 description = "Python client, based on fastmcp, for connecting to MCP servers through multiple protocols, specifically designed to work with integrated language models."
 readme = "README.md"
@@ -23,9 +23,15 @@ dependencies = [
   "fastapi",
   "websockets",
   "requests",
-  "yaml",
+  "PyYAML",
 ]
 
 [project.urls]
 Homepage = "https://github.com/rb58853/fastchat-mcp"
 Issues = "https://github.com/rb58853/fastchat-mcp/issues"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+fastchat = ["app/services/llm/prompts/texts/*.yaml"]
