--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ license = "MIT"
 license-files = ["LICENSE*"]
 dependencies = [
   "openai>=1.68.2",
-  "mcp[cli]",
-  "fastauth-api>=0.0.4",
-  "mcp-oauth>=0.0.5",
+  "mcp[cli]>=1.22.0",
+  "fastauth-api>=0.0.5",
+  "mcp-oauth>=0.0.6",
   "fastapi",
   "websockets",
   "requests",
